# owllang-playground

./: 982.owllang.js  Cargo.toml  README.md  bootstrap.js  owllang.js  package.json  style.scss  webpack.config.js
.github/workflows/: check.yml  deploy.yml
examples/: speed-test.hoot
src/: app.rs  lib.rs  runner.rs
static/: index.html  style.scss
static/examples/: factorial.ella  factorial.hoot  fibonacci.ella  fibonacci.hoot  hello-world.ella  speed-test.ella
