[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
description = "A interactive online playground for lukechu10/ellalang"
edition = "2018"
name = "ellalang-demo"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.38"
ella = {git = "https://github.com/lukechu10/ellalang", rev = "b6facb2"}
ella-parser = {git = "https://github.com/lukechu10/ellalang", rev = "b6facb2"}
ella-passes = {git = "https://github.com/lukechu10/ellalang", rev = "b6facb2"}
ella-source = {git = "https://github.com/lukechu10/ellalang", rev = "b6facb2"}
ella-value = {git = "https://github.com/lukechu10/ellalang", rev = "b6facb2"}
ella-vm = {git = "https://github.com/lukechu10/ellalang", rev = "b6facb2"}
enclose = "1.1.8"
log = "0.4"
serde = {version = "1", features = ["derive"]}
wasm-bindgen = "0.2.69"
wasm-logger = "0.2"
wee_alloc = {version = "0.4.4", optional = true}
yew = {git = "https://github.com/yewstack/yew", rev = "389a6c4"}
yew-functional = {git = "https://github.com/yewstack/yew", rev = "389a6c4"}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
features = [
  "Event",
  "KeyboardEvent",
]
version = "0.3.4"
