[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
description = "A interactive online playground for lukechu10/owllang"
edition = "2018"
name = "owllang-demo"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.38"
enclose = "1.1.8"
log = "0.4"
owl = {git = "https://github.com/lukechu10/owllang", rev = "4e4a99f"}
owl-parser = {git = "https://github.com/lukechu10/owllang", rev = "4e4a99f"}
owl-passes = {git = "https://github.com/lukechu10/owllang", rev = "4e4a99f"}
owl-source = {git = "https://github.com/lukechu10/owllang", rev = "4e4a99f"}
owl-value = {git = "https://github.com/lukechu10/owllang", rev = "4e4a99f"}
owl-vm = {git = "https://github.com/lukechu10/owllang", rev = "4e4a99f"}
serde = {version = "1", features = ["derive"]}
wasm-bindgen = "0.2.69"
wasm-logger = "0.2"
wee_alloc = {version = "0.4.4", optional = true}
yew = {git = "https://github.com/yewstack/yew", rev = "e2d7619"}
yew-functional = {git = "https://github.com/yewstack/yew", rev = "e2d7619"}
yew-services = {git = "https://github.com/yewstack/yew", rev = "e2d7619"}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
features = [
  "Event",
  "KeyboardEvent",
]
version = "0.3.4"
